# axium

./: .gitignore  Cargo.toml  diesel.toml  rustfmt.toml
db/: Cargo.toml
db/src/: lib.rs
migrations/2026-01-07-052200-0000_requests/: up.sql
web/: Cargo.toml
web/src/: main.rs  schema.rs
