[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", default-features = false, features = [
  "backtrace",
  "std",
] }
axum = { version = "0.8.8", default-features = false, features = [
  "json",
  "tokio",
  "tracing",
  "tower-log",
  "http1",
  "macros",
] }
clap = { version = "4.5.54", default-features = false, features = [
  "color",
  "derive",
  "error-context",
  "help",
  "usage",
  "std",
] }
db.workspace = true
diesel.workspace = true
jacklog = { version = "0.4.0", default-features = false, features = ["macros"] }
tokio = { version = "1.49.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
] }
tracing = { version = "0.1.44", default-features = false, features = [
  "attributes",
  "log",
] }
